# trinity

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  MANIFEST.in  QUICK_FIXES_bubble_luminosity.py  README.md  TRINITY_talk_QA_prep.docx  compare_energy_phase.py  example_dict.txt  generate_params.py  movie.txt  nohup.out  plan.md  pyproject.toml  requirements.txt  run.py  run_sweep.py  scaling_summary.csv  simplified_output.csv  simplify.mplstyle  simplify.py  temporary-HPC-runs.md  test_output.txt
.claude/: settings.json
.claude/agents/: units-reviewer.md
.claude/hooks/: guard-file.sh  post-edit-ruff.sh  session-start.sh
.codex/: config.toml  hooks.json
.codex/hooks/: guard-bash.sh
.github/workflows/: ci.yml
_example_output/: dictionary.jsonl
analysis/: BETADELTA_PHASE2_ARMS.md  CODEBASE_REVIEW.md  LSODA-check-log.txt  PHASE0_BETADELTA_BASELINES.md  README_REFACTORED_CODE.md  backward-compat-audit.md  bubble-conduction-convergence.md  bubble-integrator-robustness.md  compare_density_profile.py  compare_mass_profile.py  compare_profiles_radial.py  cooling-refactor-audit.md  dictionary-system-audit.md  n-consistency-audit.md  n-consistency-implementation-plan.md  plot_BE_radius_vs_omega.py  pressure-terms-audit.md  restructure-audit.md  sb99-refactor-audit.md  sb99-refactor-implementation-plan.md  stalling-energy-phase.md  tinit-sensitivity.md  transition-trigger-P0.md  transition-trigger-pshadow-design.md
analysis/archive/: README.md  restructure-audit.md  sb99-refactor-audit.md
analysis/bonnorEbert/: SUMMARY.txt  (+3 more)
bsh_scripts/: batch_sfe_n1e2runs.sh  batch_sfe_n1e3runs.sh  batch_sfe_n1e4runs.sh  run_simulations_1e5_n1e2.sh  run_simulations_1e5_n1e4.sh  run_simulations_1e5_n1e4_BE.sh  run_simulations_1e5_n1e4_PISM.sh  run_simulations_1e6_n1e2.sh  run_simulations_1e6_n1e4.sh  run_simulations_1e7_n1e2.sh  run_simulations_1e7_n1e2_BE.sh  run_simulations_1e7_n1e4.sh  run_simulations_1e7_n1e4_BE.sh  run_simulations_full.sh
comparison/: compare_energy_phase.py
docs/: LOGGING_GUIDE.md  TERMINATION_EVENTS.md  TRINITY_READER.md  requirements.txt
example_scripts/: .gitignore  example_plot_radius_vs_time.py  example_reader_overview.py
old/: default_values.py  example_pl_old.param  get_InitBubStruc.py  get_shellODE_old.py  write_outputs.py
old_doNotRead/: shell_structure_old.py
paper/: CLAUDE.md  make_figures.py
param/: 1e5_sfe001_n1e2.param  1e5_sfe001_n1e2_PISM1e6.param  1e5_sfe001_n1e3.param  1e5_sfe001_n1e3_PISM1e6.param  1e5_sfe001_n1e4.param  1e5_sfe001_n1e4_BE.param  1e5_sfe001_n1e4_BE14.param  1e5_sfe001_n1e4_PISM1e6.param  1e5_sfe001_n1e4_test.param  1e5_sfe010_n1e2.param  1e5_sfe010_n1e2_PISM1e6.param  1e5_sfe010_n1e3.param  1e5_sfe010_n1e3_PISM1e6.param  1e5_sfe010_n1e4.param  1e5_sfe010_n1e4_BE.param  1e5_sfe010_n1e4_PISM1e6.param  1e5_sfe020_n1e2.param  1e5_sfe020_n1e2_PISM1e6.param  1e5_sfe020_n1e3.param  1e5_sfe020_n1e3_PISM1e6.param  1e5_sfe020_n1e4.param  1e5_sfe020_n1e4_PISM1e6.param  1e5_sfe030_n1e2.param  1e5_sfe030_n1e2_PISM1e6.param  1e5_sfe030_n1e3.param  1e5_sfe030_n1e3_PISM1e6.param  1e5_sfe030_n1e4.param  1e5_sfe030_n1e4_BE.param  1e5_sfe030_n1e4_PISM0.param  1e5_sfe030_n1e4_PISM1e3.param  1e5_sfe030_n1e4_PISM1e4.param  1e5_sfe030_n1e4_PISM1e5.param  1e5_sfe030_n1e4_PISM1e6.param  1e5_sfe050_n1e2.param  1e5_sfe050_n1e2_PISM1e6.param  1e5_sfe050_n1e3.param  1e5_sfe050_n1e3_PISM1e6.param  1e5_sfe050_n1e4.param  1e5_sfe050_n1e4_PISM1e6.param  1e5_sfe080_n1e2.param  (+174 more)
prompts/: prompt_writing_guidelines.md  standalone_stromgren_PHII.md
report/: 01_OVERVIEW.md  02_ARCHITECTURE_ANALYSIS.md  03_COMPARISON_WITH_OTHER_CODES.md  04_RECOMMENDATIONS.md  05_SUMMARY.md
rosette_dense_output/: dictionary.jsonl  metadata.json  rosette_dense_summary.txt  termination_debug.txt
scratch/: diag_simplify.py  paper_AllowedGMC.py  paper_BEprofile.py  paper_Cf.py  paper_InitialCloudRadius.py  paper_LbolLWind.py  paper_LgainLloss.py  paper_ODIN.py  paper_PHII_Pb_Pram.py  paper_PISM.py  paper_PMS_caveat.py  paper_PPVtest.py  paper_R2_RIF.py  paper_Rosette.py  paper_accelerationDecomposition.py  paper_bestFitOrion.py  paper_betadelta.py  paper_bubblePhase.py  paper_cancellationMetric.py  paper_density_section.py  paper_dominantFeedback.py  paper_escapeFraction.py  paper_expansionVelocity.py  paper_feedback_new.py  paper_forceFraction.py  paper_momentum.py  paper_phii_window.py  paper_pressureEvolution.py  paper_pressureZeta.py  paper_radiusEvolution.py  paper_schematic_dens.py  pedrini_emergence_timescales.py  pedrini_weaver_scaling.py  run_all.py
src/: __init__.py  main.py
tbd/: main_expansion.py
test/: BEspheres.py  CLAUDE.md  be_plots.py  bonnorEbertv2.py  bonnorEbertv3.py  mshell_test.py  test_active_when.py  test_barnes_population.py  test_betadelta_comparison.py  test_betadelta_dt_mitigation.py  test_betadelta_hybr.py  test_betadelta_hybr_stress.py  test_betadelta_solver.py  test_betadelta_solver_switch.py  test_bubble_lsoda_quiet.py  test_bubble_luminosity.py  test_bubble_luminosity_comparison.py  test_bubble_solver_failures.py  test_bubble_solver_stress.py  test_cf_leak.py  test_cloudy_cli.py  test_cloudy_dlaw.py  test_cloudy_package_exports.py  test_cloudy_run_loader.py  test_cloudy_snapshot_to_deck.py  test_cluster_profile.py  test_cluster_submit.py  test_compare_output_folders.py  test_conventional_units.py  test_cooling_boost.py  test_dR2min_magic_number.py  test_docs_dev_conventions.py  test_energy_collapse_guard.py  test_energy_collapse_snapshot.py  test_energy_implicit_phase_comparison.py  test_energy_phase.py  test_engine_purity.py  test_fA_source_boost.py  test_fkappa_auto.py  test_gen_default_param.py  (+36 more)
tools/: _param_text.py  bubble_conduction_convergence.py  check_doc_banners.sh  compare_outputs.py  gen_default_param.py  inspect_bubble_diag.py  make_density_profile_gif.py  plot_sweep_heatmap.py  posttooluse_check_doc_banners.sh  reduce_sweep.py
trinity/: __init__.py  main.py
txt/: 1e5_sfe001_n1e2.txt  1e6_sfe001_n1e2.txt  1e7_sfe001_n1e2.txt
(+2088 files in other folders)
