[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-sf"
version = "1.0.0"
description = "TRINITY: A stellar feedback and bubble evolution simulation code"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
authors = [
    {name = "Jia Wei Teh"},
]
keywords = [
    "astrophysics",
    "stellar feedback",
    "bubble evolution",
    "star formation",
    "molecular clouds",
    "simulations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0,<3",
    "scipy>=1.7.0,<2",
    "astropy>=5.0,<8",
    "matplotlib>=3.5.0,<4",
    "pandas>=1.3.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.1,<7.2",
    "sphinx_rtd_theme==2.0.0",
    "sphinx_copybutton",
]
plots = [
    "cmasher",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/JiaWeiTeh/trinity"
Documentation = "https://jiaweiteh.github.io/trinity-web/"
Repository = "https://github.com/JiaWeiTeh/trinity"
Issues = "https://github.com/JiaWeiTeh/trinity/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = [
    "test*",
    "docs*",
]

[tool.setuptools.package-data]
"*" = [
    "param/*.param",
    "data/**/*",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
